# misis2023f-22-02-vanina-d-a

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  codeforces.id.txt  status.md
docs/: CMakeLists.txt  example.cpp  json.cpp
prj.codeforces/: 0041a.cpp  0050a.cpp  0059a.cpp  0071a.cpp  0110a.cpp  0112a.cpp  0116a.cpp  0158a.cpp  0231a.cpp  0236a.cpp  0266a.cpp  0266b.cpp  0281a.cpp  0282a.cpp  0339a.cpp  0546a.cpp  0677a.cpp  0734a.cpp  0791a.cpp  0977a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  Doxyfile  README.md  build.sh  main.cpp
prj.cw/lib/: CMakeLists.txt
prj.cw/lib/pdf2img/: CMakeLists.txt
prj.cw/lib/pdf2img/include/pdf2img/: pdf2img.h
prj.cw/lib/rectangles/: CMakeLists.txt  example.cpp  rectangles.cpp
prj.cw/lib/rectangles/include/rectangles/: rectangles.hpp
prj.cw/lib/title_check/: CMakeLists.txt  title_check.cpp
prj.cw/lib/title_check/include/title_check/: title_check.hpp
