add_executable (0071a "0071a.cpp")
add_executable (0231a "0231a.cpp")
add_executable (0158a "0158a.cpp")
add_executable (0282a "0282a.cpp")
add_executable (0050a "0050a.cpp")
add_executable (0112a "0112a.cpp")
add_executable (0339a "0339a.cpp")
add_executable (0281a "0281a.cpp")
add_executable (0236a "0236a.cpp")
add_executable (0266a "0266a.cpp")
add_executable (0791a "0791a.cpp")
add_executable (0546a "0546a.cpp")
add_executable (0059a "0059a.cpp")
add_executable (0977a "0977a.cpp")
add_executable (0110a "0110a.cpp")
add_executable (0734a "0734a.cpp")
add_executable (0041a "0041a.cpp")
add_executable (0116a "0116a.cpp")
add_executable (0677a "0677a.cpp")
add_executable (0266b "0266b.cpp")

